# example-web-service

./: .env.dev  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  api.yaml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: _build_and_publish.yaml  _check.yaml  _test.yaml  checks.yml  release.yaml
tests/: conftest.py  utils.py
tests/adapters/database/: test_migrations.py
tests/adapters/database/storages/: test_book.py  test_user.py
tests/adapters/open_library/: test_cached_client.py  test_client.py  test_reduced_client.py
tests/plugins/factories/: book.py  user.py
tests/plugins/instances/: config.py  db.py  faststream.py  nats.py  open_library.py  redis.py  rest.py  storages.py
tests/presentors/faststream/: test_upload_books.py
tests/presentors/rest/api/v1/book/: test_create_book.py  test_delete_book_by_id.py  test_fetch_book_by_id.py  test_fetch_book_list.py  test_update_book_by_id.py
tests/presentors/rest/api/v1/open_library/: test_search.py
tests/presentors/rest/api/v1/user/: test_create_user.py  test_delete_user_by_id.py  test_fetch_user_by_id.py  test_fetch_user_list.py  test_update_user_by_id.py
